apple/Sources/UniFFI/ant_ffiFFI.h

// ⚠️ Attention: If you change this #else block (ending in `#endif // def UNIFFI_SHARED_H`) you *must* ⚠️
// ⚠️ increment the version suffix in all instances of UNIFFI_SHARED_HEADER_V4 in this file.           ⚠️

typedef struct RustBuffer
{
    uint64_t capacity;
    uint64_t len;
    uint8_t *_Nullable data;
} RustBuffer;
uint64_t uniffi_ant_ffi_fn_method_client_register_update(void*_Nonnull ptr, void*_Nonnull owner, RustBuffer value, RustBuffer payment
);
uint64_t uniffi_ant_ffi_fn_method_client_scratchpad_check_existence(void*_Nonnull ptr, void*_Nonnull addr
);
uint64_t uniffi_ant_ffi_fn_method_client_scratchpad_cost(void*_Nonnull ptr, void*_Nonnull public_key
);
uint64_t uniffi_ant_ffi_fn_method_client_scratchpad_create(void*_Nonnull ptr, void*_Nonnull owner, uint64_t content_type, RustBuffer initial_data, RustBuffer payment
);
uint64_t uniffi_ant_ffi_fn_method_client_scratchpad_get(void*_Nonnull ptr, void*_Nonnull addr
);
uint64_t uniffi_ant_ffi_fn_method_client_scratchpad_get_from_public_key(void*_Nonnull ptr, void*_Nonnull public_key
);
uint64_t uniffi_ant_ffi_fn_method_client_scratchpad_put(void*_Nonnull ptr, void*_Nonnull scratchpad, RustBuffer payment
);
uint64_t uniffi_ant_ffi_fn_method_client_scratchpad_put_update(void*_Nonnull ptr, void*_Nonnull scratchpad
);
uint64_t uniffi_ant_ffi_fn_method_client_scratchpad_update(void*_Nonnull ptr, void*_Nonnull owner, uint64_t content_type, RustBuffer data
);
uint64_t uniffi_ant_ffi_fn_method_client_scratchpad_update_from(void*_Nonnull ptr, void*_Nonnull current, void*_Nonnull owner, uint64_t content_type, RustBuffer data
);
uint64_t uniffi_ant_ffi_fn_method_client_vault_cost(void*_Nonnull ptr, void*_Nonnull key, uint64_t max_expected_size
);
uint64_t uniffi_ant_ffi_fn_method_client_vault_get(void*_Nonnull ptr, void*_Nonnull key
);
uint64_t uniffi_ant_ffi_fn_method_client_vault_get_user_data(void*_Nonnull ptr, void*_Nonnull key
);
uint64_t uniffi_ant_ffi_fn_method_client_vault_put(void*_Nonnull ptr, RustBuffer data, RustBuffer payment, void*_Nonnull key, uint64_t content_type
);
uint64_t uniffi_ant_ffi_fn_method_client_vault_put_user_data(void*_Nonnull ptr, void*_Nonnull key, RustBuffer payment, void*_Nonnull user_data
);