dart/ant_ffi/lib/src/native/bindings.dart


  late final _uniffi_ant_ffi_fn_method_client_register_updatePtr = _lookup<
      ffi.NativeFunction<
          ffi.Uint64 Function(
              ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Void>,
              RustBuffer,
              RustBuffer)>>('uniffi_ant_ffi_fn_method_client_register_update');
  late final _uniffi_ant_ffi_fn_method_client_register_update =
      _uniffi_ant_ffi_fn_method_client_register_updatePtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>, RustBuffer,
              RustBuffer)>();

  int uniffi_ant_ffi_fn_method_client_scratchpad_check_existence(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<ffi.Void> addr,
  ) {
    return _uniffi_ant_ffi_fn_method_client_scratchpad_check_existence(
      ptr,
      addr,
    );
  }

  late final _uniffi_ant_ffi_fn_method_client_scratchpad_check_existencePtr =
      _lookup<
              ffi.NativeFunction<
                  ffi.Uint64 Function(
                      ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>)>>(
          'uniffi_ant_ffi_fn_method_client_scratchpad_check_existence');
  late final _uniffi_ant_ffi_fn_method_client_scratchpad_check_existence =
      _uniffi_ant_ffi_fn_method_client_scratchpad_check_existencePtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>)>();

  int uniffi_ant_ffi_fn_method_client_scratchpad_cost(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<ffi.Void> public_key,
  ) {
    return _uniffi_ant_ffi_fn_method_client_scratchpad_cost(
      ptr,
      public_key,
    );
  }

  late final _uniffi_ant_ffi_fn_method_client_scratchpad_costPtr = _lookup<
          ffi.NativeFunction<
              ffi.Uint64 Function(
                  ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>)>>(
      'uniffi_ant_ffi_fn_method_client_scratchpad_cost');
  late final _uniffi_ant_ffi_fn_method_client_scratchpad_cost =
      _uniffi_ant_ffi_fn_method_client_scratchpad_costPtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>)>();

  int uniffi_ant_ffi_fn_method_client_scratchpad_create(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<ffi.Void> owner,
    int content_type,
    RustBuffer initial_data,
    RustBuffer payment,
  ) {
    return _uniffi_ant_ffi_fn_method_client_scratchpad_create(
      ptr,
      owner,
      content_type,
      initial_data,
      payment,
    );
  }

  late final _uniffi_ant_ffi_fn_method_client_scratchpad_createPtr = _lookup<
          ffi.NativeFunction<
              ffi.Uint64 Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>,
                  ffi.Uint64, RustBuffer, RustBuffer)>>(
      'uniffi_ant_ffi_fn_method_client_scratchpad_create');
  late final _uniffi_ant_ffi_fn_method_client_scratchpad_create =
      _uniffi_ant_ffi_fn_method_client_scratchpad_createPtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>, int,
              RustBuffer, RustBuffer)>();

  int uniffi_ant_ffi_fn_method_client_scratchpad_get(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<ffi.Void> addr,
  ) {
    return _uniffi_ant_ffi_fn_method_client_scratchpad_get(
      ptr,
      addr,
    );
  }

  late final _uniffi_ant_ffi_fn_method_client_scratchpad_getPtr = _lookup<
          ffi.NativeFunction<
              ffi.Uint64 Function(
                  ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>)>>(
      'uniffi_ant_ffi_fn_method_client_scratchpad_get');
  late final _uniffi_ant_ffi_fn_method_client_scratchpad_get =
      _uniffi_ant_ffi_fn_method_client_scratchpad_getPtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>)>();

  int uniffi_ant_ffi_fn_method_client_scratchpad_get_from_public_key(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<ffi.Void> public_key,
  ) {
    return _uniffi_ant_ffi_fn_method_client_scratchpad_get_from_public_key(
      ptr,
      public_key,
    );
  }

  late final _uniffi_ant_ffi_fn_method_client_scratchpad_get_from_public_keyPtr =
      _lookup<
              ffi.NativeFunction<
                  ffi.Uint64 Function(
                      ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>)>>(
          'uniffi_ant_ffi_fn_method_client_scratchpad_get_from_public_key');
  late final _uniffi_ant_ffi_fn_method_client_scratchpad_get_from_public_key =
      _uniffi_ant_ffi_fn_method_client_scratchpad_get_from_public_keyPtr
          .asFunction<
              int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>)>();

  int uniffi_ant_ffi_fn_method_client_scratchpad_put(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<ffi.Void> scratchpad,
    RustBuffer payment,
  ) {
    return _uniffi_ant_ffi_fn_method_client_scratchpad_put(
      ptr,
      scratchpad,
      payment,
    );
  }

  late final _uniffi_ant_ffi_fn_method_client_scratchpad_putPtr = _lookup<
      ffi.NativeFunction<
          ffi.Uint64 Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>,
              RustBuffer)>>('uniffi_ant_ffi_fn_method_client_scratchpad_put');
  late final _uniffi_ant_ffi_fn_method_client_scratchpad_put =
      _uniffi_ant_ffi_fn_method_client_scratchpad_putPtr.asFunction<
          int Function(
              ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>, RustBuffer)>();

  int uniffi_ant_ffi_fn_method_client_scratchpad_put_update(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<ffi.Void> scratchpad,
  ) {
    return _uniffi_ant_ffi_fn_method_client_scratchpad_put_update(
      ptr,
      scratchpad,
    );
  }

  late final _uniffi_ant_ffi_fn_method_client_scratchpad_put_updatePtr =
      _lookup<
              ffi.NativeFunction<
                  ffi.Uint64 Function(
                      ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>)>>(
          'uniffi_ant_ffi_fn_method_client_scratchpad_put_update');
  late final _uniffi_ant_ffi_fn_method_client_scratchpad_put_update =
      _uniffi_ant_ffi_fn_method_client_scratchpad_put_updatePtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>)>();

  int uniffi_ant_ffi_fn_method_client_scratchpad_update(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<ffi.Void> owner,
    int content_type,
    RustBuffer data,
  ) {
    return _uniffi_ant_ffi_fn_method_client_scratchpad_update(
      ptr,
      owner,
      content_type,
      data,
    );
  }

  late final _uniffi_ant_ffi_fn_method_client_scratchpad_updatePtr = _lookup<
          ffi.NativeFunction<
              ffi.Uint64 Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>,
                  ffi.Uint64, RustBuffer)>>(
      'uniffi_ant_ffi_fn_method_client_scratchpad_update');
  late final _uniffi_ant_ffi_fn_method_client_scratchpad_update =
      _uniffi_ant_ffi_fn_method_client_scratchpad_updatePtr.asFunction<
          int Function(
              ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>, int, RustBuffer)>();

  int uniffi_ant_ffi_fn_method_client_scratchpad_update_from(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<ffi.Void> current,
    ffi.Pointer<ffi.Void> owner,
    int content_type,
    RustBuffer data,
  ) {
    return _uniffi_ant_ffi_fn_method_client_scratchpad_update_from(
      ptr,
      current,
      owner,
      content_type,
      data,
    );
  }

  late final _uniffi_ant_ffi_fn_method_client_scratchpad_update_fromPtr =
      _lookup<
              ffi.NativeFunction<
                  ffi.Uint64 Function(
                      ffi.Pointer<ffi.Void>,
                      ffi.Pointer<ffi.Void>,
                      ffi.Pointer<ffi.Void>,
                      ffi.Uint64,
                      RustBuffer)>>(
          'uniffi_ant_ffi_fn_method_client_scratchpad_update_from');
  late final _uniffi_ant_ffi_fn_method_client_scratchpad_update_from =
      _uniffi_ant_ffi_fn_method_client_scratchpad_update_fromPtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Void>, int, RustBuffer)>();

  int uniffi_ant_ffi_fn_method_client_vault_cost(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<ffi.Void> key,
    int max_expected_size,
  ) {
    return _uniffi_ant_ffi_fn_method_client_vault_cost(
      ptr,
      key,
      max_expected_size,
    );
  }

  late final _uniffi_ant_ffi_fn_method_client_vault_costPtr = _lookup<
      ffi.NativeFunction<
          ffi.Uint64 Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>,
              ffi.Uint64)>>('uniffi_ant_ffi_fn_method_client_vault_cost');
  late final _uniffi_ant_ffi_fn_method_client_vault_cost =
      _uniffi_ant_ffi_fn_method_client_vault_costPtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>, int)>();

  int uniffi_ant_ffi_fn_method_client_vault_get(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<ffi.Void> key,
  ) {
    return _uniffi_ant_ffi_fn_method_client_vault_get(
      ptr,
      key,
    );
  }

  late final _uniffi_ant_ffi_fn_method_client_vault_getPtr = _lookup<
          ffi.NativeFunction<
              ffi.Uint64 Function(
                  ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>)>>(
      'uniffi_ant_ffi_fn_method_client_vault_get');
  late final _uniffi_ant_ffi_fn_method_client_vault_get =
      _uniffi_ant_ffi_fn_method_client_vault_getPtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>)>();

  int uniffi_ant_ffi_fn_method_client_vault_get_user_data(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<ffi.Void> key,
  ) {
    return _uniffi_ant_ffi_fn_method_client_vault_get_user_data(
      ptr,
      key,
    );
  }

  late final _uniffi_ant_ffi_fn_method_client_vault_get_user_dataPtr = _lookup<
          ffi.NativeFunction<
              ffi.Uint64 Function(
                  ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>)>>(
      'uniffi_ant_ffi_fn_method_client_vault_get_user_data');
  late final _uniffi_ant_ffi_fn_method_client_vault_get_user_data =
      _uniffi_ant_ffi_fn_method_client_vault_get_user_dataPtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>)>();

  int uniffi_ant_ffi_fn_method_client_vault_put(
    ffi.Pointer<ffi.Void> ptr,
    RustBuffer data,
    RustBuffer payment,
    ffi.Pointer<ffi.Void> key,
    int content_type,
  ) {
    return _uniffi_ant_ffi_fn_method_client_vault_put(
      ptr,
      data,
      payment,
      key,
      content_type,
    );
  }

  late final _uniffi_ant_ffi_fn_method_client_vault_putPtr = _lookup<
      ffi.NativeFunction<
          ffi.Uint64 Function(
              ffi.Pointer<ffi.Void>,
              RustBuffer,
              RustBuffer,
              ffi.Pointer<ffi.Void>,
              ffi.Uint64)>>('uniffi_ant_ffi_fn_method_client_vault_put');
  late final _uniffi_ant_ffi_fn_method_client_vault_put =
      _uniffi_ant_ffi_fn_method_client_vault_putPtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>, RustBuffer, RustBuffer,
              ffi.Pointer<ffi.Void>, int)>();

  int uniffi_ant_ffi_fn_method_client_vault_put_user_data(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<ffi.Void> key,
    RustBuffer payment,
    ffi.Pointer<ffi.Void> user_data,
  ) {
    return _uniffi_ant_ffi_fn_method_client_vault_put_user_data(
      ptr,
      key,
      payment,
      user_data,
    );
  }

  late final _uniffi_ant_ffi_fn_method_client_vault_put_user_dataPtr = _lookup<
          ffi.NativeFunction<
              ffi.Uint64 Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>,
                  RustBuffer, ffi.Pointer<ffi.Void>)>>(
      'uniffi_ant_ffi_fn_method_client_vault_put_user_data');
  late final _uniffi_ant_ffi_fn_method_client_vault_put_user_data =
      _uniffi_ant_ffi_fn_method_client_vault_put_user_dataPtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>, RustBuffer,
              ffi.Pointer<ffi.Void>)>();
